--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
 					<div class="color_text"><br/><br/><marquee scrolldelay="150" direction="left" title="Holding your cursor over this stops the marquee."
                                ONMOUSEOVER="this.stop();"
                                ONMOUSEOUT="this.start();" width="100%">
-			<a href="Results.html" style="font-size:14px; color:#FF0000; font-weight:bold; text-decoration:underline;">Final List Results</a> 
+			<a href="home.html" style="font-size:14px; color:#FF0000; font-weight:bold; text-decoration:underline;">Final List Results</a> 
 			</marquee><br/><br/>
 			
                     </div>
