--- a/contact_us.html
+++ b/contact_us.html
@@ -25,7 +25,7 @@
                          <li style="background: none;"><a href="index.html">Home</a></li>
                          <li><a href="about_us.html">About Us</a></li>
                          <li><a href="contact_us.html">Contact Us</a></li>
-                         <li><a href="home.html">Zonal Railways Results</a></li>
+                         <li><a href="Results.htm">Zonal Railways Results</a></li>
                          
                     </ul>
                     <div class="spacer"></div>
@@ -37,7 +37,7 @@
                         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span style="font-size:25px;"> Welcome To Indian Railways </span>   
                         <span style="font:normal 13px 'Comic Sans MS', cursive; color:#fff;">...lifeline to the nation</span>
                         </p>
-                        <marquee><p class="merque_text"><span>Flash News:</span>  <a href="download/EXAM.pdf">We welcome you to the website of Railway Recruitment Control Board, New Delhi</a> <span>**New</span></p>
+                        <marquee><p class="merque_text"><span>Flash News:</span>  <a href="EXAM">We welcome you to the website of Railway Recruitment Control Board, New Delhi</a> <span>**New</span></p>
                     </marquee>
                     </div>
                     <div style="width:52px; float:left;"><img src="new.png"/></div>
@@ -331,7 +331,7 @@
                   <li class="none"><a href="index.html">Home</a></li>
                   <li><a href="about_us.html">About Us</a></li>
                   <li><a href="contact_us.html">Contact us</a></li>
-                  <li><a href="recruitment.html">Zonal Railways Results</a></li>
+                  <li><a href="Results.htm">Zonal Railways Results</a></li>
               </ul>
                   <br />
                   <br />
