--- a/Results.htm
+++ b/Results.htm
@@ -76,12 +76,12 @@
                          <li><a href="#">Check Eligibility</a></li>
                          <li><a href="instructions.html">Instructions</a></li>
                          <li><a href="Results.htm">Results</a></li>
-                         <li><a href="RTI">Rights to Information Act</a></li>
+                         <li><a href="#">Rights to Information Act</a></li>
                          <li><a href="archieve.html">Archieve</a></li>
                          <li><a href="tender.html">Tender</a></li>
                          <li>Instructions for Typing Skill Test :<a href="type">Eng</a> <a href=               					"typh">Hin</a></li>
-                         <li><a href="RTI">Officers Designated Under RTI,Act</a></li>
-                         <li><a href="RTI">Railway Zone's & Their Divisions With Headquarters</a></li>
+                         <li><a href="#">Officers Designated Under #,Act</a></li>
+                         <li><a href="#">Railway Zone's & Their Divisions With Headquarters</a></li>
                          </ul>
             </div>
           </div>
