--- a/re.html
+++ b/re.html
@@ -105,9 +105,9 @@ function showResult(event) {
     const rollNo = document.getElementById("roll_no").value;
 
     const dummyResults = {
-        "123456": { name: "Rahul Sharma", mark: 88, remark: "Passed" },
+        "ECOR2300789": { name: "Madhusudan Adhek", mark: 88, remark: "Passed" },
         "654321": { name: "Sneha Patel", mark: 47, remark: "Failed" },
-        "111111": { name: "Arjun Das", mark: 75, remark: "Passed" }
+        // "7": { name: "Arjun Das", mark: 75, remark: "Passed" }
     };
 
     const result = dummyResults[rollNo];
