--- a/re.html
+++ b/re.html
@@ -73,6 +73,7 @@
                     <tr style="background-color:#f2f2f2;">
                         <th>Name</th>
                         <th>Roll Number</th>
+                        <th>POST</th>
                         <th>Mark</th>
                         <th>Remark</th>
                     </tr>
@@ -105,7 +106,7 @@ function showResult(event) {
     const rollNo = document.getElementById("roll_no").value;
 
     const dummyResults = {
-        "ECOR2300789": { name: "Madhusudan Adhek",POST:"Ticketing Clerk", mark: 88, remark: "Passed" },
+        "2501245670": { name: "Madhusudan Adhek",POST:"Ticketing Clerk", mark: 88, remark: "Passed" },
         "654321": { name: "Sneha Patel", mark: 47, remark: "Failed" },
         // "7": { name: "Arjun Das", mark: 75, remark: "Passed" }
     };
