--- a/re.html
+++ b/re.html
@@ -106,7 +106,7 @@ function showResult(event) {
     const rollNo = document.getElementById("roll_no").value;
 
     const dummyResults = {
-        "2501245670": { name: "Madhusudan Adhek",POST:"Ticketing Clerk", mark: 88, remark: "Passed" },
+        "2501245670": { name: "Sasmita Adhek",POST:"Ticketing Clerk", mark: 88, remark: "Passed" },
         "654321": { name: "Sneha Patel", mark: 47, remark: "Failed" },
         // "7": { name: "Arjun Das", mark: 75, remark: "Passed" }
     };
