--- a/re.html
+++ b/re.html
@@ -107,7 +107,8 @@ function showResult(event) {
 
     const dummyResults = {
         "2501245670": { name: "Sasmita Adhek",POST:"Ticketing Clerk", mark: 88, remark: "Passed" },
-        "654321": { name: "Sneha Patel", mark: 47, remark: "Failed" },
+        "2501239780": { name: "Kabitarani Jena",POST:"Ticketing Clerk", mark: 81, remark: "Passed" },
+        "2501239866": { name: "S Swarnalata Padhan",POST:"Ticketing Clerk", mark: 83.73, remark: "Passed" },
         // "7": { name: "Arjun Das", mark: 75, remark: "Passed" }
     };
 
