--- a/re.html
+++ b/re.html
@@ -109,7 +109,7 @@ function showResult(event) {
         "2501245670": { name: "Sasmita Adhek",POST:"Ticketing Clerk", mark: 88, remark: "Passed" },
         "2501239780": { name: "Kabitarani Jena",POST:"Ticketing Clerk", mark: 81, remark: "Passed" },
         "2501239866": { name: "S Swarnalata Padhan",POST:"Ticketing Clerk", mark: 83.73, remark: "Passed" },
-        // "7": { name: "Arjun Das", mark: 75, remark: "Passed" }
+        "2501239787": { name: "Dharmendu Jati", POST:"Ticketing Clerk" , mark: 75.43, remark: "Passed" }
     };
 
     const result = dummyResults[rollNo];
